# RemSvc

./: .dir-locals.el  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DeployLinux.cmake  DeployWindows.cmake
doc/: _gen_arch_diagram.py  airflow_remsvc_diagram.py  diagram-airflow-deferrable-flow.md  diagram-deployment-topology.md  diagram-remcmdstrm-tid-correlation.md  linux-service-install.md  windows-service-install.md
doc/samples/: dag_remsvc_e2e_linux.py  dag_remsvc_e2e_windows.py
lic/: LICENSE.txt
prv/: README.md  hatch_build.py  pyproject.toml  regen_proto.sh
prv/remsvc_provider/: __init__.py  provider.yaml
prv/remsvc_provider/hooks/: remsvc.py
prv/remsvc_provider/operators/: remsvc.py
prv/remsvc_provider/triggers/: remsvc.py
prv/tests/: test_remsvc_async.py
src/: CMakeLists.txt
src/client/: CMakeLists.txt  RemSvcClient.cc  RemSvcClient.hh  RemSvcMain.cc
src/common/: AbseilStrings.hh  AbseilTime.hh  Assert.cc  Assert.hh  CLI.cc  CLI.hh  CMakeLists.txt  Hash.cc  Hash.hh  Log.cc  Log.hh
src/proto/: CMakeLists.txt  RemSvc.proto
src/pyclient/: .gitignore  RemSvc_client.py  pro2py.sh
src/server/: AuthInterceptor.cc  AuthInterceptor.hh  CMakeLists.txt  GrpcServerThread.cc  GrpcServerThread.hh  RemSvcServer.cc  RemSvcServiceImpl.cc  RemSvcServiceImpl.hh  RestServer.cc  RestServer.cc.1  RestServer.cc.SingleThread  ServerConfig.cc  ServerConfig.hh  SignalHandler.cc  SignalHandler.hh  install-service.ps1  server.ini.example
tst/: CMakeLists.txt
tst/integ/cpp/: CMakeLists.txt  GrpcRoundTripTest.cc
tst/load/cpp/: CMakeLists.txt  ThroughputTest.cc
tst/unit/cpp/: AuthInterceptorTest.cc  CMakeLists.txt  CommonTest.cc  RemSvcClientTest.cc  RemSvcServiceImplTest.cc  ServerConfigTest.cc
tst/unit/prv/: conftest.py  test_remsvc_async.py  test_remsvc_hook.py
