[build-system]
# grpcio-tools is required here (not just in [dev]) so that pip's isolated
# build environment has it available when hatch_build.py generates the stubs.
# grpcio and grpcio-tools must share the same version bounds to avoid protobuf
# ABI mismatches between stubs generated at build time and the runtime library.
requires = ["hatchling", "grpcio-tools>=1.67.0,<2"]
build-backend = "hatchling.build"

[project]
name = "airflow-provider-remsvc"
version = "1.0.0"
description = "Apache Airflow provider for RemSvc remote execution via gRPC"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    # NOTE: apache-airflow is intentionally NOT listed here as a hard
    # dependency — it is provided by the target Airflow environment.
    # Add it only in the [dev] extras below.
    # Keep grpcio lower bound in sync with grpcio-tools in [build-system].requires
    # to avoid protobuf ABI mismatches between generated stubs and runtime.
    "grpcio>=1.67.0,<2",
    # grpcio-status is NOT listed: the provider uses only grpc.aio / grpc.StatusCode
    # from the core grpcio package.  grpcio-status (the googleapis-common-protos
    # wrapper) is not imported anywhere and would be a dead dependency.
    "protobuf>=4.0.0,<6",
]

[project.optional-dependencies]
dev = [
    "apache-airflow>=3.1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.67.0,<2",
    # mypy-protobuf: generates .pyi type stubs alongside the pb2 files at build
    # time, enabling IDE autocompletion and mypy type-checking on gRPC stub code.
    # Optional — the build hook skips .pyi generation if this is not installed.
    "mypy-protobuf>=3.4",
]

# Airflow discovers the provider via this entry point
[project.entry-points."apache_airflow_provider"]
remsvc = "remsvc_provider"

[tool.hatch.build.targets.wheel]
# Both remsvc_provider/ and remsvc_proto/ are included in the wheel.
# remsvc_proto/ is populated by the custom build hook (hatch_build.py)
# before the wheel is assembled, so pip install is fully self-contained.
packages = ["remsvc_provider", "remsvc_proto"]

[tool.hatch.build.hooks.custom]
# Activates hatch_build.py — generates gRPC stubs at build time.
path = "hatch_build.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["../tst/unit/prv"]
