[build-system]
# grpcio-tools is required here (not just in [dev]) so that pip's isolated
# build environment has it available when hatch_build.py generates the stubs.
# grpcio and grpcio-tools must share the same version bounds to avoid protobuf
# ABI mismatches between stubs generated at build time and the runtime library.
requires = ["hatchling", "grpcio-tools>=1.67.0,<2"]
build-backend = "hatchling.build"

[project]
name = "airflow-provider-remsvc"
version = "1.0.0"
description = "Apache Airflow provider for RemSvc remote execution via gRPC"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Semih Cemiloglu", email = "semih.cemiloglu@gmail.com" },
]
keywords = ["airflow", "provider", "grpc", "remote-execution"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Distributed Computing",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dependencies = [
    # NOTE: apache-airflow is intentionally NOT listed here as a hard
    # dependency — it is provided by the target Airflow environment.
    # Add it only in the [dev] extras below.
    # Keep grpcio lower bound in sync with grpcio-tools in [build-system].requires
    # to avoid protobuf ABI mismatches between generated stubs and runtime.
    "grpcio>=1.67.0,<2",
    # grpcio-status is NOT listed: the provider uses only grpc.aio / grpc.StatusCode
    # from the core grpcio package.  grpcio-status (the googleapis-common-protos
    # wrapper) is not imported anywhere and would be a dead dependency.
    "protobuf>=4.0.0,<6",
]

[project.urls]
Homepage   = "https://github.com/semihc/RemSvc"
Repository = "https://github.com/semihc/RemSvc"
Issues     = "https://github.com/semihc/RemSvc/issues"

[project.optional-dependencies]
dev = [
    "apache-airflow>=3.1.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "grpcio-tools>=1.67.0,<2",
    # mypy-protobuf: generates .pyi type stubs alongside the pb2 files at build
    # time, enabling IDE autocompletion and mypy type-checking on gRPC stub code.
    # Optional — the build hook skips .pyi generation if this is not installed.
    "mypy-protobuf>=3.4",
]

# Airflow discovers the provider via this entry point.
# Must point to the callable function, not the module — Airflow calls
# entry_point.load()() and a module object is not callable.
[project.entry-points."apache_airflow_provider"]
remsvc = "remsvc_provider:get_provider_info"

[tool.hatch.build.targets.wheel]
# Both remsvc_provider/ and remsvc_proto/ are included in the wheel.
# remsvc_proto/ is populated by the custom build hook (hatch_build.py)
# before the wheel is assembled, so pip install is fully self-contained.
packages = ["remsvc_provider", "remsvc_proto"]

[tool.hatch.build.targets.editable]
# Editable installs must add the prv/ parent to sys.path so that both
# remsvc_provider/ and remsvc_proto/ (siblings under prv/) are importable.
# Without this, Hatchling writes only the individual package dirs into the
# .pth file and remsvc_proto is not found at runtime.
packages = ["remsvc_provider", "remsvc_proto"]

[tool.hatch.build.hooks.custom]
# Activates hatch_build.py — generates gRPC stubs at build time.
path = "hatch_build.py"

[tool.hatch.publish.index]
url = "https://upload.pypi.org/legacy/"

[tool.hatch.publish.test]
url = "https://test.pypi.org/legacy/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["../tst/unit/prv"]
